--- a/tools/read_COCO_ann.ipynb
+++ b/tools/read_COCO_ann.ipynb
@@ -67,67 +67,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/46674 [00:00<?, ?it/s]"
+      "  0%|          | 0/46743 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 22%|██▏       | 10136/46674 [02:20<06:03, 100.60it/s]"
+      "100%|██████████| 46743/46743 [10:14<00:00, 76.09it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "except train_map_0002628.png\n",
-      "except train_map_0002630.png\n"
+      "Done\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 36%|███▌      | 16865/46674 [03:43<05:24, 91.90it/s] "
+      "100%|██████████| 10597/10597 [01:35<00:00, 110.74it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "except [] in train_map_2_0000661.txt\n",
-      "except [] in train_map_2_0000661.txt\n",
-      "except when moving: train_map_2_0000661.jpg\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 40%|████      | 18835/46674 [04:25<09:28, 48.95it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "except train_map_2_0002628.png\n",
-      "except train_map_2_0002630.png\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 49%|████▉     | 22789/46674 [06:09<14:05, 28.26it/s]"
+      "Done\n"
      ]
     }
    ],
@@ -229,7 +204,7 @@
     "        # setup img     info\n",
     "        img_info = {\n",
     "            \"license\": license,\n",
-    "            \"file_Lname\": img_filename,\n",
+    "            \"file_name\": img_filename,\n",
     "            \"height\": h,\n",
     "            \"width\": w,\n",
     "            \"id\": _id\n",
